--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,3 +37,9 @@ a:hover{
 .pb-50{
 	margin-bottom: 50px;
 }
+.title{
+	color:$bg-celeste;
+	font-family: $Sigmar;
+	font-size: 3rem;
+	//padding-bottom: 30px;
+}
