actualizando en casa

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -72,8 +72,8 @@ body
 					img.foto.w-100(src="img/sobremi.png")
 
 	.w-100#lema
-		.container.lema.text-center
-			h2 "Programando con pasión y espíritu verde"
+		.container.lema.text-center#maquina
+			h2 
 														
 
 	.main.our_woks_area.section-padding#portafolio
