--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,12 +1,12 @@
 $Poiret:'Roboto';
 $Sigmar:'Montserrat';
-$titulo-font:'Montserrat';
+$titulo-font: 'Lily Script One', cursive;
 $bg-color:#ffffff;
 $bg-celeste:#F2385A;
 $bg-white:#fff;
 $text-color:#FF358B;
 $text-white:#fff;
-$black:#2C3E50;
+$black:black;
 $ensayo:rgba(44, 62, 80, 0.15);
 $bg-border:black;
 $bg-rosa:#F2385A;
