--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,6 +5,7 @@ head
 	meta(charset="UTF-8")
 	title Sarita Coder
 	link(rel="stylesheet", href="font-awesome/css/font-awesome.min.css")
+	link(rel="icon" href="img/SARITA-02.png")
 	meta(name="viewport" content="width=device-width, initial-scale=1")
 	link(rel="stylesheet", href="css/animate.css")
 	link(rel="stylesheet", href="css/ihover.css")
@@ -69,12 +70,20 @@ body(data-spy="scroll" data-target=".navbar" data-offset="50")
 			.row
 				+title("Sobre mí")
 			.row.description
-				.col-sm-8.col-sm-offset-2.text-center
+				.col-sm-5.col-sm-offset-1.text-center
+					p.hola.text-left ¡Hola!
+					p Mi nombre es Sarita, soy desarrolladora front-end mi pasión por el mundo digital se ha inclinado por la programación desde que ingrese a la Laboratoria descubrí que toda idea o sueño se puede materializar. Me encanta lo que hago y disfruto mucho trabajando en equipo.
+					.cualidades
+						.row
+							+cualidad("fa-heart-o","Naturaleza")
+							+cualidad("fa-thumbs-o-up","Fuerza")
+							+cualidad("fa-lightbulb-o","Inteligente")
+							+cualidad("fa-users","Equipo")
+							+cualidad("fa-laptop","Compañero")
+							+cualidad("fa-globe","Viajar")
+
+				.col-sm-5.text-center
 					.foto
-					p Sarita Román Colonio 
-					p Busco desarrollarme en el mundo tecnológico por que desde que ingrese a la Laboratoria descubrí que toda idea o sueño se puede materializar. Como también amar a Google, que se ha convertido en mi compañero, mostrándome que podemos programar un mundo diferente. Han sido 5 meses que me permitieron conocer el poder que llevamos dentro y más aun cuando trabajamos en equipo.
-				
-					
 
 	.w-100#lema
 		.container.lema.text-center
@@ -99,38 +108,14 @@ body(data-spy="scroll" data-target=".navbar" data-offset="50")
 							li.filter(data-filter=".js") JS
 							li.filter(data-filter=".grupal") Grupal
 					.portfolio_item
-						.mix.category-1.css
-							a(href="http://sarita-coder.github.io/whassapt" target="_blank")
-								img(src="img/whatsap.png")
-						.mix.category-1.jade
-							a(href="http://sarita-coder.github.io/future-imperfect" target="_blank")
-								img(src="img/future-imperfect.png")
-						.mix.category-1.sass
-							a(href="http://sarita-coder.github.io/triangle-free" target="_blank")
-								img(src="img/triangle.png")
-						.mix.category-1.js
-							a(href="http://sarita-coder.github.io/reloj-digital" target="_blank")
-								img(src="img/reloj_digital.png")
-						.mix.category-1.grupal.sass.jade
-							a(href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica" target="_blank")
-								img(src="img/republica.png")
-						.mix.category-1.sass
-							a(href="http://sarita-coder.github.io/Love-Blog" target="_blank")
-								img(src="img/portfolio_1.png")
-						.mix.category-1.jade
-							.ih-item.square.effect8.scale_up
-							a(href="#" target="_blank")
-								.img
-									img(src="img/flat-theme-01.png")
-								.info
-									h3 FLAT THEME
-									a(href="http://sazabache.github.io/Flat-theme")
-										span.fa.fa-arrow-right
+						+portafolio("jade sass","flat-theme-01","Flat Theme","http://sarita-coder.github.io/Love-Blog")
+						+portafolio("sass jade","future-imperfect","Future Imperfect","http://sarita-coder.github.io/future-imperfect")
+						+portafolio("jade grupal sass","republica","República","http://emilyvivancocuba.github.io/Examen-grupal-La-Republica")
+						+portafolio("css","whatsap","Whaptsap","http://sarita-coder.github.io/whassapt")
+						+portafolio("sass","triangle","Triangle","http://sarita-coder.github.io/triangle-free")
+						+portafolio("js","reloj_digital","Reloj Digital","http://sarita-coder.github.io/reloj-digital")
+						+portafolio("sass grupal","flat","Flat Theme","http://sazabache.github.io/Flat-theme")
 
-
-						.mix.category-1.sass.grupal
-							a(href="http://sarita-coder.github.io/future-imperfect" target="_blank")
-								img(src="img/flat.png")
 
 	.w-100#lema
 		.container.lema.text-center
@@ -147,34 +132,42 @@ body(data-spy="scroll" data-target=".navbar" data-offset="50")
 						a(href="")
 							span.fa.fa-code
 						p Desarrolladora Web
-						p Maquetación de páginas web responsive con diferentes tecnologías: Html, Css, Sass, Jade, Js, Jquery, Worpress, Base de datos.
+						p Maquetación de páginas web responsive con diferentes tecnologías: Html, Css, Sass, Jade, Js, Jquery, Worpress. Con nociones en Modelo Vista Controlador con Java, Base de datos con Sql, Postgres y MySql.
 
 				.col-sm-4.col-xs-12
 					.especialidad
 						a(href="")
 							span.fa.fa-globe
 						p Geomática
-						p Desarrolo de aplicaciones para la creación y administración de informácion espacial para mejorar la habilidad del ususario para acceder a información y compartirla de manera más efectiva.
-				//- .col-sm-4.col-xs-12
-				//- 	.especialidad
-				//- 		a(href="")
-				//- 			span.fa.fa-check-circle-o
-				//- 		p Economía
-				//- 		p 
+						p Desarrollo de aplicaciones para la creación y administración de informácion espacial para mejorar la experiencia de navegabilidad del ususario para acceder a información y compartirla de manera efectiva.
+
 	.main#contacto
 		.container.text-center.contacto
 			.row
 				+title("Contactame")
 			.row
-				.redes
-					a(href="https://github.com/sarita-coder" target="_blank").fa.fa-github
-					a(href="https://plus.google.com/u/0/103995783096870228612/about" target="_blank").fa.fa-google-plus-square
-					a(href="https://www.facebook.com/edised.roman" target="_blank").fa.fa-facebook
-					a(href="https://www.linkedin.com/in/saritacoder" target="_blank").fa.fa-linkedin-square
-				.correo
-					p sarita.roman.colonio@gmail.com
+				p 
+					a.mail(href="mailto:sarita.roman.colonio@gmail.com") sarita.roman.colonio@gmail.com
+				.col-sm-4.col-sm-offset-2
+					.foto1
+				.col-sm-5
+					form
+						.form-group.text-left
+							label.w-100(for="exampleInputEmail1") Name
+								input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Name")
+							label.w-100(for="exampleInputEmail1") Email
+								input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Email")
+							textarea.form-control(rows="3") Hola, Tengo un proyecto y me gustaría que seas parte del equipo por que necesitamos personas comprometidas y creativas. 
+
+							button.btn-enviar.btn.btn-default(type="submit") Enviar
 
 
+
+
+
+					
+
+		
 	footer
 		.container.text-center
 			.row
