modificaciones en la presetacion contactame telefono

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -148,9 +148,11 @@ body(data-spy="scroll" data-target=".navbar" data-offset="50")
 			.row
 				p 
 					a.mail(href="mailto:sarita.roman.colonio@gmail.com") sarita.roman.colonio@gmail.com
-				.col-sm-4.col-sm-offset-2
+				p
+					a.mail(href="") 991645498
+				.col-sm-4.col-sm-offset-1
 					.foto1
-				.col-sm-5
+				.col-sm-6
 					form
 						.form-group.text-left
 							label.w-100(for="exampleInputEmail1") Name
