--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,7 +5,7 @@ head
 	meta(charset="UTF-8")
 	title Sarita Coder
 	link(rel="stylesheet", href="font-awesome/css/font-awesome.min.css")
-	link(rel="icon" href="img/SARITA-02.png")
+	link(rel="shourtcut icon" href="img/SARITA-02.png" type="image/png")
 	meta(name="viewport" content="width=device-width, initial-scale=1")
 	link(rel="stylesheet", href="css/animate.css")
 	link(rel="stylesheet", href="css/ihover.css")
@@ -72,18 +72,17 @@ body(data-spy="scroll" data-target=".navbar" data-offset="50")
 			.row.description
 				.col-sm-5.col-sm-offset-1.text-center
 					p.hola.text-left ¡Hola!
-					p Mi nombre es Sarita, soy desarrolladora front-end mi pasión por el mundo digital se ha inclinado por la programación desde que ingrese a la Laboratoria descubrí que toda idea o sueño se puede materializar. Me encanta lo que hago y disfruto mucho trabajando en equipo.
+					p Mi nombre es Sarita, soy desarrolladora front-end mi pasión por el mundo digital se ha inclinado por la programación y desde que ingrese a la Laboratoria descubrí que toda idea o sueño se puede materializar. Me encanta lo que hago y disfruto mucho trabajando en equipo.
 					.cualidades
-						.row
-							+cualidad("fa-heart-o","Naturaleza")
+						.row.text-center
 							+cualidad("fa-thumbs-o-up","Fuerza")
 							+cualidad("fa-lightbulb-o","Inteligente")
 							+cualidad("fa-users","Equipo")
 							+cualidad("fa-laptop","Compañero")
-							+cualidad("fa-globe","Viajar")
 
 				.col-sm-5.text-center
 					.foto
+						//img(src="img/sobre_mi2.jpg", alt="")
 
 	.w-100#lema
 		.container.lema.text-center
