--- a/css/main.css
+++ b/css/main.css
@@ -6086,10 +6086,11 @@ a:hover {
       font-size: 15px;
       font-weight: bold; }
   .description .foto {
-    border-radius: 50%;
-    width: 75%;
-    background-image: url("../img/sobremi.png");
+    width: 300px;
     height: 300px;
+    border-radius: 50%;
+    display: inline-block;
+    background-image: url("../img/sobre_mi2.jpg");
     background-size: 150%;
     background-position: 50% 0%;
     margin: auto; }
