--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -271,10 +271,11 @@
 
 	}
 	.foto{
-	    border-radius: 50%;
-	    width: 75%;
-	    background-image: url("../img/sobremi.png");
-	    height: 300px;
+		width: 300px;
+		height: 300px;
+		border-radius: 50%;
+		display: inline-block;
+		background-image:url("../img/sobre_mi2.jpg"); 
     	background-size: 150%;
     	background-position: 50% 0%;
 	    margin: auto;
